# aws-iot-device-sdk-cpp

./: .gitignore  CMakeLists.txt
samples/AWSIOTDevice/: AWSIOTDevice.cpp  AWSIOTDevice.h  CMakeLists.txt  IOTClient.cpp  IOTClient.hpp
samples/AWSIOTDeviceWrapper/: AWSIOTDeviceWrapper.cpp  AWSIOTDeviceWrapper.h  CMakeLists.txt
samples/AWSIOTUser/: AWSIOTDevice.h  AWSIOTUser  CMakeLists.txt  main.cpp
samples/IOTClient/: CMakeLists.txt  IOTClient.cpp  IOTClient.hpp  IOTClientWrapper.cpp  IOTClientWrapper.h
